# alpaccaai

./: .gitattributes  .gitignore  AGENTS.md  ALPECCA_LAUNCHER.bat  ALPECCA_TOOLS.bat  Alpecca-App.bat  CLAUDE.md  HANDOFF.md  PROJECT_CONTEXT.md  README.md  RUN_VCS.bat  SHARE_PHONE.bat  START_DISCORD.bat  START_HERE.bat  alpecca_hyfuser_runtime.py  app.py  check_voice.bat  config.py  install_voice.bat  package.json  pyproject.toml  pytest.ini  requirements-core.txt  requirements-discord.txt  requirements-mcp.txt  requirements-mindpage-optional.txt  requirements-notifications.txt  requirements-rog-hyfuser-cu128.txt  requirements-stage4-art.txt  requirements.txt  run_rigger.bat  server.py  setup_face.bat  start.bat  start_face.bat  start_full.bat
.claude/: launch.json
alpacca/: __init__.py  actions.py  appearance.py  homeostasis.py  introspection.py  memory.py  mind.py  openclaw_bridge.py  portrait.py  proactive.py  prompts.py  sensory.py  sentiment.py  state.py  vision.py  voice.py
alpaccaai/: __init__.py  __main__.py  agent.py  cli.py  config.py  tools.py
alpecca/: __init__.py  action_closure.py  actions.py  affect.py  affect_evidence.py  appearance.py  artlib.py  auth.py  (+161 more)
apps/agentic-frontier/: README.md  START_AGENTIC_FRONTIER.bat  app-manifest.json  build-client.mjs  package-lock.json  package.json  pyproject.toml
apps/agentic-frontier/agentic_frontier/: __init__.py  accounts.py  app.py  engine.py
apps/agentic-frontier/web/: index.html
apps/agentic-frontier/web/src/: api.js  game.js  index.template.html  main.js  physics.js  styles.css  world-assets.js
(+690 files in other folders)
