[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-frontier"
version = "0.3.0"
description = "Standalone server-authoritative Alventius Experimentus 3D adventure game"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
agentic-frontier = "agentic_frontier.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_frontier*"]
